fixing bleed-through of pattern grid

--- a/src/ui/pattern_grid.css
+++ b/src/ui/pattern_grid.css
@@ -523,8 +523,8 @@
 .pattern-grid-container {
     --pattern-grid-sticky-top: 0px;
     flex-grow: 1;
-    /* needed to display the edit mode border!*/
-    padding: 3px;
+    /* don't interfere with edit mode border */
+    padding: 0;
     padding-bottom: 20vh;
     position: relative;
     overflow: auto;
